# openfabric-test-app

./: .gitignore  Dockerfile  Dockerfile.backend  README.md  Self-Hosting Guide - Docker _ Jitsi Meet(Config env).mhtml  Self-Hosting Guide - Docker _ Jitsi Meet.mhtml  app.py  main.py  pyproject.toml  start.sh
config/: properties.json
core/: llm.py  memory.py  pipeline.py  remote.py  stub.py  tagger.py  vector_db.py
datastore/: memory.json  state.json
