[tool.poetry]
name = "ai-test"
version = "1.0"
description = "'An application for demonstrating your skills in AI'"
authors = ["Rockstar"]

[tool.poetry.dependencies]
python = ">3.9.7,<3.12"
openfabric-pysdk = "^0.3.0"
transformers = "^4.30.0"
torch = "^2.0.0"
requests = "^2.28.0"
streamlit = "^1.22.0"
pillow = "^9.5.0"
accelerate = "^1.6.0"
chromadb = "^1.0.7"
chroma-migrate = "^0.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"

[[tool.poetry.source]]
name = "node2"
url = "https://repo.node2.openfabric.network/index"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
